# Picotest1

./: CMakeLists.txt  ILI9163C.c  ILI9163C.h  ILI9225.c  ILI9225.h  README.md  SSD1351.c  SSD1351.h  ST7735.c  ST7735.h  blinkingEye.c  catEye.h  config.h  defaultEye.h  defaultEye2.h  digitalIO.c  digitalIO.h  doeEye.h  dragonEye.h  goatEye.h  led.c  led.h  newtEye.h  spi.c  spi.h  timing.c  timing.h  types.h  uncannyEyes.c
